actualizacion del front 2
