# front/monsterGameFight/src/app/game/game.routes.ts
@@ -2,9 +2,10 @@ import { Routes } from '@angular/router';
 import { DashboardComponent } from './dashboard/dashboard.component';
 import { CharacterComponent } from './character/character.component';
 import { CombatComponent } from './combat/combat.component';
+import { AuthGuard } from '../core/guards/auth.service';
 
 export const routes: Routes = [
-  { path: '', component: DashboardComponent },
-  { path: 'character', component: CharacterComponent },
-  { path: 'combat', component: CombatComponent },
+  { path: '', component: DashboardComponent, canActivate: [AuthGuard] },
+  { path: 'character', component: CharacterComponent, canActivate: [AuthGuard] },
+  { path: 'combat', component: CombatComponent, canActivate: [AuthGuard] }
 ];
